--- a/fetchNStore/Views/Shared/_Layout.cshtml
+++ b/fetchNStore/Views/Shared/_Layout.cshtml
@@ -17,8 +17,17 @@
             <select ng-model="methodSelected">
                 <option ng-repeat="x in methods">{{x}}</option>
             </select>
-            <input placeholder="URL" ng-model="urlSelected"/>
-            <button ng-click="fetchFunction()">Fetch</button>
+            <select ng-model="urlSelected">
+                <option ng-repeat="u in urls">{{u}}</option>
+            </select>
+            @*<input value="http://www.omdbapi.com/?s=harry&r=json" placeholder="http://www.omdbapi.com/?s=harry&r=json" ng-model="urlSelected"/>*@
+            <button ng-click="fetchFunction(methodSelected, urlSelected)">Fetch</button>
+        </div>
+        <div>
+            <h4><b>Response Status Code:</b> {{statusResult}}</h4>
+            <h4><b>URL:</b> {{urlSelected}}</h4>
+            <h4><b>XHttp Method:</b> {{methodSelected}}</h4>
+            <h4><b>Response Time:</b> {{showtime}}</h4>
         </div>
     </div>
     <br /><br />
